--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- Links -->
-    <!-- <link rel="preconnect" href="%REACT_APP_NETWORK_URL%" /> -->
+    <!--RPC preconnect-->
     <link rel="preconnect" href="%REACT_APP_NODE_1%" />
     <link rel="preconnect" href="%REACT_APP_NODE_2%" />
     <link rel="preconnect" href="%REACT_APP_NODE_3%" />
     <link rel="preconnect" href="%REACT_APP_HECO_NODE_1%" />
+    <link rel="preconnect" href="%REACT_APP_MATIC_NODE_1%" />
+    <link rel="preconnect" href="%REACT_APP_MATIC_NODE_2%" />
+    <!-- Links -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link crossorigin rel="prefetch" href="https://rsms.me/inter/font-files/Inter-Regular.woff2?v=3.18" as="font">
     <link crossorigin rel="prefetch" href="https://rsms.me/inter/font-files/Inter-SemiBold.woff2?v=3.18" as="font">
