Update description in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="NFT Focused Multi-chain DEX with cross-chain Bridge. Powered by HecoChain & BSC, coming soon: Solana, PolkaDot, NearProtocol, Polygon, Avalanche."
+      content="Gamified DeFi ecosystem. High-Profit Yield Farming. Smart NFT assets. Multichain DEX. Cross-chain bridge. Powered by: Chainlink, BSC, Polygon, Heco."
     />
     <meta
       property="og:description"
-      content="NFT Focused Multi-chain DEX with cross-chain Bridge. Powered by HecoChain & BSC, coming soon: Solana, PolkaDot, NearProtocol, Polygon, Avalanche."
+      content="Gamified DeFi ecosystem. High-Profit Yield Farming. Smart NFT assets. Multichain DEX. Cross-chain bridge. Powered by: Chainlink, BSC, Polygon, Heco."
     />
     <meta property="og:image" content="https://gravis.finance/android-chrome-512x512.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
