Updated menu links

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5SLLRCX" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "82d4d233e2c2413f9900c3ae507d9b55"}'></script>
+    <!-- End Cloudflare Web Analytics -->
     <!-- Google.Analytics counter -->
     <script>
       window.dataLayer = window.dataLayer || []
