--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-32x32.png" sizes="32x32" />
     <!-- Meta -->
-    <title>Gravis Finance Exchange</title>
+    <title>Gravis Finance Exchange Interface</title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
